--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,1 +1,54 @@
-// TODO
+.banner {
+  width: 100%;
+  height: 400px;
+}
+
+.loading {
+  color: var(--highlight);
+  font-size: 1rem;
+}
+
+.article {
+  margin: 5rem auto;
+  width: 100%;
+
+  .title {
+    color: var(--heading);
+    font-size: 3rem;
+    font-weight: 700;
+    letter-spacing: -0.5px;
+    line-height: 1.2;
+    margin-bottom: 1.5rem;
+  }
+
+  .section {
+    margin-top: 4rem;
+  }
+
+  .subtitle {
+    color: var(--heading);
+    font-size: 2.25rem;
+    line-height: 1.4;
+  }
+
+  .body {
+    margin-top: 2.25rem;
+    color: var(--body);
+    font-size: 1.125rem;
+    line-height: 1.4;
+    text-align: justify;
+
+    strong {
+      font-weight: 700;
+    }
+
+    li {
+      list-style: initial;
+    }
+
+    em {
+      font-style: normal;
+      color: var(--highlight);
+    }
+  }
+}
